{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "6f5e5cc5-4ed4-470e-bb21-4ef03b0ced8b",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "ca042223-f46e-47fb-98af-bfeec8f39a85",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "faccb16a-eb05-45a6-a083-d0cbcaaed246",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "f13b22fe-fdc2-41a7-be72-5d8097b00b77",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3c47a317-0ffc-4480-81dc-6b89fb01cc56",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c442366e-a365-4d95-88eb-1db4332dfb99",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1600fdcc-9b94-4ea6-97c3-4f36961e20fd",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}